--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>Warehouse In Out system</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="container">
+      <div class="row">
+        <div class="col-2">
+          <div class="list-group list-group-flush text-center">
+              <a href="/" class="list-group-item disabled" disabled>Index</a>
+              <a href="/product" class="list-group-item">Products</a>
+              <a href="/stock" class="list-group-item">Stocks</a>
+              <a href="/user" class="list-group-item">Users</a>
+              <a href="/deliveryOrder" class="list-group-item">Delivery Orders</a>
+              <button type="submit" form="logout" class="list-group-item">Logout</button>
+          </div> 
+          
+          <form action="/user/logout" method="post" id="logout">
+          </form> 
+        </div>
+
+        <div class="col-10">
+          <div class="row my-1">
+            <div class="col">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item active" aria-current="page">Home</li>
+                </ol>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
