--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="position-absolute top-50 start-50 translate-middle border border-primary bg-light">
-            <form action="/users/login" method="post" >
+            <form action="/user/login" method="post" >
                 <div class="row text-center">
                     <label class="h1">Login</label>
                 </div>
