--- a/views/deliveryOrder/index.ejs
+++ b/views/deliveryOrder/index.ejs
@@ -88,7 +88,7 @@
                         <%= data.phone %>
                     </div>
                     <div class="col">
-                        <%= data.delivery_check ? "Finish": "Not Finish" %>
+                        <%= data.delivery_check==1 ? "Finish": "Not Finish" %>
                     </div>
                     <div class="col">
                         <%= data.delivery_user %>
