--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -8,8 +8,7 @@
             <a href="/" class="btn btn-primary">index</a>
             <div class="row my-2 border-bottom border-dark">
                 <div class="col fw-bold fs-5">
-                    <a href='/productlist/sort?sort=Product_id&seq=<%= sort==="Product_id"?-1:1 %>'>貨品編號
-                        <script src="./counter.dat"></script></a>
+                    <a href='/productlist/sort?sort=Product_id&seq=<%= sort==="Product_id"?-1:1 %>'>貨品編號</a>
                 </div>
                 <div class="col fw-bold fs-5">
                     <a href='/productlist/sort?sort=Type&seq=<%= sort==="Type"?-1:1 %>'>類型</a>
