update delivery Order list

--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
 
-                            <input type="submit" value="Search data" class="btn btn-primary">
+                            <input type="submit" value="Search" class="btn btn-primary m-1">
                         </form>
                     </div>
                     <div class="row my-1 border-bottom border-dark">
