--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -64,7 +64,7 @@
                                 </div>
                             </div>
 
-                            <input type="submit" value="Search data" class="btn btn-primary">
+                            <input type="submit" value="Search" class="btn btn-primary m-1">
                         </form>
                     </div>
 
