--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -9,10 +9,10 @@
                 <div class="col-2">
                     <div class="list-group list-group-flush text-center">
                         <a href="/" class="list-group-item">Index</a>
-                        <a href="/product" class="list-group-item">Products</a>
+                        <a href="/productlist" class="list-group-item">Products</a>
                         <a href="/stock" class="list-group-item disabled" disabled>Stocks</a>
-                        <a href="/user" class="list-group-item">Users</a>
                         <a href="/deliveryOrder" class="list-group-item">Delivery Orders</a>
+                        <a href="/user" class="list-group-item">Users</a>
                         <button type="submit" form="logout" class="list-group-item">Logout</button>
                     </div> 
 
