--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -1,5 +1,12 @@
 <html>
     <head>
+        <% let today = new Date();
+           let year = today.getFullYear();
+           let month = String(today.getMonth()+1).padStart(2,'0');
+           let day = String(today.getDay()).padStart(2,'0');
+           let toDate = year+month+day ;
+           let middle ;
+           %>
         <title>Warehouse In Out system</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
@@ -56,9 +63,6 @@
                         </div>
                         <div class="col fw-bold fs-5">
                             <a href='/productlist/sort?sort=&seq=<%= sort===""?-1:1 %>'>快將過期數量</a>
-                        </div>
-                        <div class="col fw-bold fs-5">
-                            <a href='/productlist/sort?sort=Brand&seq=<%= sort==="Product_id"?-1:1 %>'>試試看進行排序</a>
                         </div>                
                     </div>
                     <% for(x in data){ %>
@@ -85,13 +89,27 @@
                                 <%= data[x].trans_stock_id[0].name %>
                             </div>
                             <div class="col">
-                            
+                                <%
+                                let Arr = [], mod ; 
+                                Arr.push(Object.keys(data[x].Date));
+                                for(let j in Arr){
+                                    
+                                    Arr[j] = Arr[j]/100 ;
+                                }
+                                for(let i in data[x].Date){
+                                    //if(toDate) 
+                                    middle = Object.keys(data[x].Date[i])    ;
+                                    //middle = middle%100 ;
+                                    %>
+                                    <%= data[x].Date[i] %><br />
+                                    <% } %><br><br>
+                                    
                             </div>
 
                             <div class="col">
-                                <form action="/revise" method="post">
-                                    <input type="hidden" value="<%= data[x].Product_id %>">
-                                    <input type="submit" value="修改商品" class="btn btn-primary" onclick="alert('安安')">
+                                <form action="/product/info" method="post">
+                                    <input type="hidden" name="call_info" value="<%= data[x].Product_id %>">
+                                    <input type="submit" value="修改商品" class="btn btn-primary" onclick="window.confirm(`要修改<%= data[x].Name %>嗎?`)">
                                 </form>
                                 <form action="/productlist/delete" method="post">
                                     <input type="hidden" name='call_no' value="<%= data[x].Product_id %>">
