Rita(home_ver1007)

--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -89,7 +89,7 @@
                             </div>
 
                             <div class="col">
-                                <form action="/revise" method="post">
+                                <form action="./../product/info" method="post">
                                     <input type="hidden" value="<%= data[x].Product_id %>">
                                     <input type="submit" value="修改商品" class="btn btn-primary" onclick="alert('安安')">
                                 </form>
