--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -40,7 +40,7 @@
                         </form>
                         </div>
                     </div><div class="" style="float: right;">
-                        <form action="./update" method="=get">
+                        <form action="./update" method="post">
                         <button class="btn btn-primary" style="float:right;padding:10px">Update Order</button>
                   
                 <div class="row my-2 border-bottom border-dark">
